--- a/package.json
+++ b/package.json
@@ -34,18 +34,18 @@
     "code"
   ],
   "peerDependencies": {
-    "typedoc": ">=0.22.0"
+    "typedoc": "^0.25.7"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.10",
+    "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
-    "jest": "^27.3.1",
+    "jest": "^29.7.0",
     "standard-version": "^9.3.2",
-    "ts-jest": "^27.0.7",
-    "typedoc": "^0.22.10",
-    "typescript": "^4.5.2"
+    "ts-jest": "^29.1.2",
+    "typedoc": "^0.25.7",
+    "typescript": "^5.3.3"
   }
 }
