--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typedoc-plugin-inline-sources",
   "version": "1.0.1",
-  "description": "A plugin for TypeDoc that inlines source code into comments.",
+  "description": "A plugin for TypeDoc that inlines source code into documentation.",
   "main": "dist/index.js",
   "files": [
     "dist/"
@@ -28,24 +28,21 @@
   },
   "homepage": "https://github.com/tgreyuk/typedoc-plugin-inline-sources#readme",
   "keywords": [
-    "typedocplugin",
-    "sources",
-    "source",
-    "code"
+    "typedoc-plugin"
   ],
   "peerDependencies": {
     "typedoc": "^0.25.7"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "standard-version": "^9.3.2",
+    "standard-version": "^9.5.0",
     "ts-jest": "^29.1.2",
-    "typedoc": "^0.25.7",
+    "typedoc": "^0.25.8",
     "typescript": "^5.3.3"
   }
 }
