--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ["16"]
+        node: ['18']
     name: Node ${{ matrix.node }}
     steps:
       - name: Checkout repository
