--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dist/"
   ],
   "scripts": {
-    "lint": "eslint ./src --ext .ts",
+    "lint": "eslint ./src",
     "prepublishOnly": "npm run lint && npm run build && npm run test",
     "build": "rm -rf dist && tsc",
-    "release": "standard-version",
-    "demo": "npm run build && typedoc --tsconfig ./tsconfig.test.json",
-    "test": "jest"
+    "build-and-test": "npm run build && npm run test",
+    "demo": "npm run build && npm run pretest",
+    "toc": "node ./scripts/toc.mjs",
+    "pretest": "ts-node ./test/__scripts__/prepare.ts",
+    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest",
+    "test:update": "npm run test -- -u"
   },
   "repository": {
     "type": "git",
@@ -20,9 +23,6 @@
   },
   "author": "Tom Grey",
   "license": "MIT",
-  "engines": {
-    "node": ">= 10.8.0"
-  },
   "bugs": {
     "url": "https://github.com/tgreyuk/typedoc-plugin-inline-sources/issues"
   },
@@ -34,15 +34,23 @@
     "typedoc": "0.25.x || 0.26.x"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.17",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
-    "eslint": "^8.56.0",
+    "@types/node": "^22.5.4",
+    "consola": "^3.2.3",
+    "eslint": "^9.10.0",
+    "fs-extra": "^11.2.0",
     "jest": "^29.7.0",
-    "standard-version": "^9.5.0",
-    "ts-jest": "^29.1.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.0.0",
+    "remark": "^15.0.1",
+    "remark-toc": "^9.0.0",
+    "to-vfile": "^8.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.26.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.5.0"
   }
 }
