--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "typedoc-plugin"
   ],
   "peerDependencies": {
-    "typedoc": "^0.25.7"
+    "typedoc": "0.25.x || 0.26.x"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -42,7 +42,7 @@
     "jest": "^29.7.0",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.1.2",
-    "typedoc": "^0.25.8",
+    "typedoc": "^0.26.7",
     "typescript": "^5.3.3"
   }
 }
