--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "A plugin for TypeDoc that inlines source code into documentation.",
   "main": "dist/index.js",
+  "type": "module",
   "files": [
     "dist/"
   ],
@@ -13,8 +14,8 @@
     "build-and-test": "npm run build && npm run test",
     "demo": "npm run build && npm run pretest",
     "toc": "node ./scripts/toc.mjs",
-    "pretest": "ts-node ./test/__scripts__/prepare.ts",
-    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest",
+    "pretest": "rm -rf ./test/out && typedoc --options ./test/typedoc.json",
+    "test": "jest",
     "test:update": "npm run test -- -u"
   },
   "repository": {
@@ -34,23 +35,24 @@
     "typedoc": "0.25.x || 0.26.x"
   },
   "devDependencies": {
-    "@eslint/js": "^9.10.0",
+    "@eslint/js": "^9.16.0",
     "@types/fs-extra": "^11.0.4",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^22.5.4",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.1",
     "consola": "^3.2.3",
-    "eslint": "^9.10.0",
+    "eslint": "^9.16.0",
     "fs-extra": "^11.2.0",
     "jest": "^29.7.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-organize-imports": "^4.0.0",
+    "prettier": "^3.4.1",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "remark": "^15.0.1",
     "remark-toc": "^9.0.0",
     "to-vfile": "^8.0.0",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typedoc": "^0.26.7",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.5.0"
+    "tsx": "^4.19.2",
+    "typedoc": "^0.27.2",
+    "typedoc-plugin-markdown": "4.3.1",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.16.0"
   }
 }
