--- a/package.json
+++ b/package.json
@@ -32,27 +32,27 @@
     "typedoc-plugin"
   ],
   "peerDependencies": {
-    "typedoc": "0.25.x || 0.26.x"
+    "typedoc": "0.25.x || 0.26.x || 0.27.x"
   },
   "devDependencies": {
-    "@eslint/js": "^9.16.0",
+    "@eslint/js": "^9.21.0",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.1",
-    "consola": "^3.2.3",
-    "eslint": "^9.16.0",
-    "fs-extra": "^11.2.0",
+    "@types/node": "^22.13.5",
+    "consola": "^3.4.0",
+    "eslint": "^9.21.0",
+    "fs-extra": "^11.3.0",
     "jest": "^29.7.0",
-    "prettier": "^3.4.1",
+    "prettier": "^3.5.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "remark": "^15.0.1",
     "remark-toc": "^9.0.0",
     "to-vfile": "^8.0.0",
-    "ts-jest": "^29.2.5",
-    "tsx": "^4.19.2",
-    "typedoc": "^0.27.2",
-    "typedoc-plugin-markdown": "4.3.1",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.16.0"
+    "ts-jest": "^29.2.6",
+    "tsx": "^4.19.3",
+    "typedoc": "^0.27.8",
+    "typedoc-plugin-markdown": "4.4.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1"
   }
 }
